# muftiAi

./: .gitignore  clean_database.py  debug_deoband.html  deoband_cookies.json.example  main.py  migrate.py  pyproject.toml  requirements.txt
mufti_api/: __init__.py  config.py  database.py  deps.py  fatwa_insert.py  main.py  schemas.py
mufti_api/routers/: auth.py  chat.py  donations.py  fatwas.py  muftis.py  questions.py  scraper.py
mufti_scraper/: __init__.py  __main__.py  cleaning.py  cli.py  config.py  http_client.py  pdf_extract.py  robots.py
mufti_scraper/db/: __init__.py  models.py  repository.py
mufti_scraper/sources/: __init__.py  alikhlas.py  almufti.py  banuri.py  base.py  deoband.py  karachi.py  registry.py
tests/: test_api.py  test_cleaning.py  test_repository_dedupe.py
